--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -10,6 +10,8 @@ member.signup=회원가입
 post.post.message=새 게시물 만들기
 post.post.content=내용
 
+member.passwordEdit.inputPassword = 새 비밀번호
+member.passwordEdit.confirmPassword = 새 비밀번호 확인
 
 rememberMe=로그인 상태 유지
 logo=가지가지한다
