--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,7 +14,7 @@ member.passwordEdit.inputPassword = 새 비밀번호
 member.passwordEdit.confirmPassword = 새 비밀번호 확인
 
 rememberMe=로그인 상태 유지
-logo=가지가지한다
+logo=춤추는 고래
 
 confirm=확인
 cancel=취소
